fix: errpr handling, feat: new loader testing and many more

--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -512,10 +512,14 @@
   }
 }
 
-.btnn:hover {
+.addHover:hover{
   background-color: #d3d0ca !important;
-  transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out; 
 }
+// .btnn:hover {
+//   background-color: #d3d0ca !important;
+//   transition: all 0.4s ease-in-out;
+// }
 
 .multiple-chats {
   display: flex;
