fix: css blue border fix

--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -89,6 +89,7 @@
     background-color: black;
     overflow-y: auto;
     overflow-x: hidden;
+    border: unset !important;
     width: 100%;
   }
 }
