fix: on logout tab changes and pot chats design

--- a/client/src/pages/modal/modalContent.scss
+++ b/client/src/pages/modal/modalContent.scss
@@ -50,6 +50,7 @@
 .startConvo {
   font-size: 23px;
   font-weight: 400;
+  margin-bottom: 12px;
 
   @media screen and (max-width: $responsiveFrameSize1) {
     font-size: 20px;
