--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -135,6 +135,10 @@ overflow-y: hidden;
     width: 100%;
     text-align: center;
 	font-size: 20px;
+
+	@media screen and (max-width:500px)  {
+		font-size :17px;
+	  }
 }
 .displayAnimation{
   position: absolute;
