fix: max length for profile picture in register

--- a/client/src/customComponents/profilePicture/profilePicture.scss
+++ b/client/src/customComponents/profilePicture/profilePicture.scss
@@ -30,6 +30,7 @@
     align-items: center;
     font-size: $input_Font_Size;
     color: $genericBlueColor;
+    white-space: nowrap;
 
     &::placeholder{
         color:$genericBlueColor;
